道路的限制信息中，时间、车辆限制的改善

--- a/scripts/components/road/tpls/attr_link_tpl/limitOfOrdinaryTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/limitOfOrdinaryTpl.html
@@ -1,4 +1,4 @@
-<div ng-controller="ordinaryLimitController" id="oridinaryLimitDiv" style="font-size: 12px" >
+<div ng-controller="ordinaryLimitController" id="oridinaryLimitDiv" class="fm-comp">
     <form name="ordinaryLimitFrom">
         <ul class="list-group list-group-lg m-b-none">
             <li class="list-group-item">
