--- a/scripts/components/road/tpls/attr_link_tpl/carPopoverTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/carPopoverTpl.html
@@ -406,14 +406,14 @@
 
         <div class="pull-right" style="display:inline-flex;color: #fff">
             <a style="cursor: pointer;"  ng-click="showPopover($event)">添加</a>
-            <input  type="checkbox" id="checkallow" ng-checked="checkValue" ng-click="checkViche()" >允许
+            <input  type="checkbox" ng-model="checkValue" ng-click="checkViche()" >允许
         </div>
         <div class="clearfix"></div>
     </div>
     <div class="date-body">
         <div class="date-list"></div>
         <div class="date-list" ng-repeat="item in carData">
-            <div class="col-md-6" style="color:#ffffff;padding: 5px;" ng-bind="item.label">
+            <div class="col-md-6" style="padding: 5px;" ng-style="{color:{true: 'blue', false: 'red'}[checkValue]}" ng-bind="item.label">
             </div>
         </div>
         <div class="clearfix"></div>
@@ -422,7 +422,7 @@
     <div class="datetip">
         <div class="pull-left" style="margin-top: -8px;color: #FFF;">车辆类型</div>
         <div class="pull-right" style="margin-top: -10px;">
-            <button type="button" class="close" aria-label="Close" ng-click="showPopover($event);"
+            <button type="button" class="close" aria-label="Close" ng-click="close()"
                     style="color: #fff;opacity: 1;margin-top: -4px;margin-right: -8px;">
                 <span aria-hidden="true">&times;</span>
             </button>
@@ -431,7 +431,7 @@
         <div class="line line-date"></div>
         <div class="form-group fix-time slide-well" id="carDiv" >
             <li ng-repeat="item in vehicleOptions" style=" list-style: none;color:#ffffff;">
-            <input tabindex="1" style="float:right;margin-right: 10px" type="checkbox"
+            <input tabindex="1" style="float:right;margin-right: 10px;" type="checkbox"
                    ng-checked="item.checked"
                    ng-click="carSelect(item,$event)"/>{{item.label}}
             </li>
