--- a/scripts/components/tools/tpls/assist-tools/batchJobPanelNewTpl.html
+++ b/scripts/components/tools/tpls/assist-tools/batchJobPanelNewTpl.html
@@ -17,6 +17,11 @@
                     </div>
                     <div class="radio col-md-12">
                         <label style="line-height: 20px">
+                            <input ng-model="radioModel" style="margin-top: 4px" type="radio" name="batchItem" id="optionsRadios3" value="BATCH_POI_GUIDELINK"> 批处理POI建关联
+                        </label>
+                    </div>
+                    <div class="radio col-md-12">
+                        <label style="line-height: 20px">
                             <input ng-model="radioModel" style="margin-top: 4px" type="radio" name="batchItem" id="optionsRadios2" value="BATCH_SPEED_CLASS"> 批处理速度限制等级
                             <span ng-if="showSelect" style="padding: 0 10px">参数: </span>
                             <select ng-if="showSelect" ng-model="myOption" ng-change="changeParam(myOption)" style="display: inline;width: 125px;font-size:12px;background-color: #555;height: inherit;color: white;padding: 0;" class="form-control">
