修改大门，poi分类

--- a/scripts/components/road/tpls/attr_connexity_tpl/rdLaneConnexityTpl.html
+++ b/scripts/components/road/tpls/attr_connexity_tpl/rdLaneConnexityTpl.html
@@ -66,10 +66,10 @@
                             <label class="control-label">附加车道</label>
                             <div>
                                 <label for="leftAddtionalLane">左</label>
-                                <input id="leftAddtionalLane" type="text" style="width: 49px"
+                                <input id="leftAddtionalLane" disabled class="chosen-disabled" type="text" style="width: 49px"
                                        ng-model="lanesData.leftExtend"/>
                                 <label for="rightAddtionalLane">右</label>
-                                <input id="rightAddtionalLane" type="text" style="width: 49px"
+                                <input id="rightAddtionalLane" disabled class="chosen-disabled" type="text" style="width: 49px"
                                        ng-model="lanesData.rightExtend"/>
 
                             </div>
