--- a/scripts/components/poi/tpls/attr-tips/poiRawFieldTpl.html
+++ b/scripts/components/poi/tpls/attr-tips/poiRawFieldTpl.html
@@ -1,25 +1,30 @@
 <div ng-controller="RawFieldController">
-    <div ng-class="{true:'divMsgBack',false:'divMsgHide'}[same.sameTplShow]"></div>
-    <div ng-class="{true:'divMsg',false:'divMsgHide'}[same.sameTplShow]">
-        <div>框选区域内POI：</div>
+    <div ng-class="{true:'divMsgBack',false:'divMsgHide'}[raw.rawTplShow]"></div>
+    <div ng-class="{true:'divMsg',false:'divMsgHide'}[raw.rawTplShow]">
+        <div>移动的距离是{{distance}}米，确定要移动吗？确认选择移动原因并点击是，否则请点击否</div>
         <div class="content">
             <div class="fm-fitsize scroll-styled">
                 <table ng-if="true" class="table">
                     <tbody>
-                    <tr ng-repeat="node in same.sameNameList">
-                        <td >{{$index+1}}</td>
-                        <td class="tdWidthText">{{node.name}}</td>
-                        <td class="tdWidthLable"><label class="label label-primary">{{node.kindName}}</label> </td>
-                        <td > <span class="glyphicon glyphicon-remove-sign" style="padding-top:7px;float: right;color: darkgray;float: left;cursor:pointer;" ng-click="minusSamePoi($index)"></span>
-                        </td>
+                    <tr >
+                        <td ><input type="radio" name="rawFied" ng-click="changeRawField(8)" checked ></td>
+                        <td class="tdWidthText"><span>与道路逻辑关系调整</span></td>
+                    </tr>
+                    <tr>
+                        <td ><input type="radio" name="rawFied" ng-click="changeRawField(9)" ></td>
+                        <td class="tdWidthText"><span>与设施逻辑关系调整</span></td>
+                    </tr>
+                    <tr>
+                        <td ><input type="radio" name="rawFied" ng-click="changeRawField(10)" ></td>
+                        <td class="tdWidthText"><span>精度调整</span></td>
                     </tr>
                     </tbody>
                 </table>
             </div>
         </div>
         <div style="text-align: center;">
-            <button type="button" class="btn btn-sm btn-lev" ng-click="saveSame();">创 建</button>
-            <button type="button" class="btn btn-sm btn-lev" ng-click="clearSame();">取 消</button>
+            <button type="button" class="btn btn-sm btn-lev" ng-click="saveRaw();">是</button>
+            <button type="button" class="btn btn-sm btn-lev" ng-click="clearRaw();">否</button>
         </div>
     </div>
 </div>
