修改分歧界面样式

--- a/less/editor-road.less
+++ b/less/editor-road.less
@@ -440,35 +440,6 @@
         margin: 5px 0;
     }
 
-    /*输入查询图片*/
-    .pic-show {
-        border: 1px solid #ddd;
-        z-index: 999;
-        padding-left: 4px;
-        padding-top: 6px;
-        padding-bottom: 7px;
-        box-shadow: 4px 4px 7px 0px #777;
-        min-width: 100%;
-        min-height: 193px;
-    }
-
-    .pic-show-well {
-        min-width: 100%;
-        min-height: 246px;
-    }
-
-    .img-well {
-        float: left;
-        padding: 3px;
-        margin: 4px;
-        cursor: pointer;
-    }
-
-    .show-img {
-        width: 60px;
-        height: 49px;
-    }
-
     .img-describe {
         color: #fff;
         font-size: 11px;
@@ -859,22 +830,16 @@
         padding-bottom: 7px;
         background-color: #333;
         box-shadow: 4px 4px 7px 0px #777;
-        min-width: 70%;
+        min-width: 60%;
         min-height: 193px;
+        max-width: 60%;
+        right: 37px;
+        margin-top: 25px;
     }
 
     .pic-show-well {
         min-width: 100%;
         min-height: 246px;
-    }
-
-    .img-well {
-        float: left;
-        padding: 3px;
-        border: 1px solid #fff;
-        border-radius: 4px;
-        margin: 4px;
-        cursor: pointer;
     }
 
     .show-img {
@@ -1016,36 +981,4 @@
 
 .suspend_hide {
     display: none;
-}
-
-/*高速分歧map上图片显示*/
-
-.picMapShow {
-    width: 194px;
-    height: 162px;
-    float: left;
-    border-radius: 4px;
-    margin-left: 50px;
-}
-
-.picMapImg {
-    width: 192px;
-    position: absolute;
-    height: 160px;
-    z-index: 99;
-    top: 51px;
-}
-
-.picModalImg {
-    width: 192px;
-    top: 51px;
-    height: 160px;
-    position: absolute;
-    z-index: 9;
-}
-
-.picMapDesc {
-    color: #fff;
-    width: 100%;
-    text-align: center;
 }
