--- a/less/editor.less
+++ b/less/editor.less
@@ -2655,3 +2655,43 @@ input[type="range"]::-webkit-slider-thumb {
   overflow:hidden;
   border-radius:6px;
 }
+
+/*高速分歧map上图片显示*/
+
+.picMapShow {
+  width: 194px;
+  height: 162px;
+  border-radius: 4px;
+  margin-left: 50px;
+}
+.picMapImg {
+  width: 192px;
+  position: absolute;
+  height: 160px;
+  z-index: 99;
+  top: 51px;
+}
+
+.picModalImg {
+  width: 192px;
+  top: 51px;
+  height: 160px;
+  position: absolute;
+  z-index: 9;
+}
+
+.picMapDesc {
+  color: #fff;
+  width: 100%;
+  text-align: center;
+}
+.img-well {
+  float: left;
+  padding: 3px;
+  border: 1px solid #fff;
+  border-radius: 4px;
+  margin: 4px;
+  cursor: pointer;
+  width: 73px;
+  text-align: center;
+}
