--- a/scripts/components/road/tpls/attr_branch_Tpl/namesOfBranch.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/namesOfBranch.html
@@ -157,6 +157,27 @@
             </div>
         </div>
     </div>
+    <div ng-if="diverObj.details[0].branchType == 1||diverObj.details[0].branchType == 2" class="module-box show-detail-title">
+         <ul class="list-group list-group-lg m-b-none">
+             <li class="list-group-item">
+                 <div class="list-name">
+                     <a ng-click="addItem('name')" class="fm-cursor">名称（共 {{nameGroup.length}} 组）</a>
+                 </div>
+                 <div class="list-add-icon" ng-click="addItem();">
+                     <i class="glyphicon glyphicon-plus-sign"></i>
+                 </div>
+                 <div class="list-line"></div>
+             </li>
+             <li class="list-group-item">
+                 <ul ng-repeat="namesItem in nameGroup | orderBy:'nameGrouppid'" class="list-group child-list-ul list-group-lg m-b-none">
+                     <li class="list-group-item" ng-repeat="item in namesItem  | orderBy:'pid'">
+                         <label class="control-label fm-cursor" ng-click="showDetail(0,$index ,namesItem,item.nameGroupid);" ng-bind="item.name"></label>
+                         <i class="glyphicon glyphicon-remove-circle" ng-click="removeItem($index,item)"></i>
+                     </li>
+                 </ul>
+             </li>
+         </ul>
+    </div>
     <!--end 名称信息-->
     <!--begin 经过线-->
     <div class="module-box show-detail-title" ng-click="showDetail(1);">
