--- a/less/editor.less
+++ b/less/editor.less
@@ -2690,8 +2690,8 @@ input[type="range"]::-webkit-slider-thumb {
   padding: 3px;
   border: 1px solid #fff;
   border-radius: 4px;
-  margin: 4px;
+  margin: 4px !important;
   cursor: pointer;
-  width: 73px;
+  width: 87px;
   text-align: center;
 }
