1.地图handler的mousedown事件改进，改为只有在左键点击时触发； 2.右击地图居中； 3.重构道路link改变的关联维护方式

--- a/scripts/components/road/tpls/attr_link_tpl/basicTpl.html
+++ b/scripts/components/road/tpls/attr_link_tpl/basicTpl.html
@@ -19,7 +19,7 @@
                 <label class="control-label">道路种别</label>
             </div>
             <div class="inline">
-                <select  ng-model="linkData.kind" ng-change="changeKindCode();"
+                <select  ng-model="linkData.kind" ng-change="changeKind(linkData.kind, '{{linkData.kind}}');"
                         ng-options="value.id as value.label for value in kindOptions">
                     <option>--</option>
                 </select>
