--- a/scripts/components/poi/tpls/attr-tips/poiPopoverTips.html
+++ b/scripts/components/poi/tpls/attr-tips/poiPopoverTips.html
@@ -65,8 +65,8 @@
                 <div class="col-sm-12 tips-info">
                     <label class="col-sm-6 control-label text-right">数据状态：</label>
                     <label class="label label-primary"
-                           ng-class="{0: 'default', 1:'info', 2: 'danger', 3: 'success'}[poi.uRecord]"
-                           ng-bind="recordObject[poi.uRecord]"></label>
+                           ng-class="{0: 'default', 1:'info', 2: 'danger', 3: 'success'}[poi.state]"
+                           ng-bind="recordObject[poi.state]"></label>
                 </div>
                 <div class="col-sm-12 tips-info">
                     <label class="col-sm-6 control-label text-right">3D标识：</label>
