--- a/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -151,17 +151,17 @@
         <div class="form-group" style="background-color: #404040;margin-bottom: 0px;height:30px;">
             <div class="col-sm-2" ng-repeat="item in dataTipsData.info" ng-if="item.arwG">
                 <div class="out-link-img" ng-if="item.ext == 0">
-                    <img ng-src="../../../images/road/1301/1301_0_{{item.arwG}}.svg" ng-click="getFeatDataCallback(dataTipsData.o_array[item.sq-1].d_array[0].out[0].id,'RDLINK')">
+                    <img ng-src="../../../images/road/1301/1301_0_{{item.arwG}}.svg" ng-click="highlightSymbol(dataTipsData.o_array[item.sq-1].d_array[0].out[0].id,'RDLINK')">
                 </div>
                 <div class="out-link-img" ng-if="item.ext == 1">
-                    <img ng-src="../../../images/road/1301/1301_2_{{item.arwG}}.svg" ng-click="getFeatDataCallback(dataTipsData.o_array[item.sq-1].d_array[0].out[0].id,'RDLINK')">
+                    <img ng-src="../../../images/road/1301/1301_2_{{item.arwG}}.svg" ng-click="highlightSymbol(dataTipsData.o_array[item.sq-1].d_array[0].out[0].id,'RDLINK')">
                 </div>
             </div>
         </div>
         <div class="form-group" style="background-color: #404040;margin-bottom: 0px;height:30px;">
             <div class="col-sm-2" ng-repeat="item in dataTipsData.info" ng-if="item.arwB">
                 <div class="out-link-img">
-                    <img ng-src="../../../images/road/1301/1301_1_{{item.arwB}}.svg" ng-click="getFeatDataCallback(dataTipsData.o_array[item.sq-1].d_array[0].out[0].id,'RDLINK')">
+                    <img ng-src="../../../images/road/1301/1301_1_{{item.arwB}}.svg" ng-click="highlightSymbol(dataTipsData.o_array[item.sq-1].d_array[0].out[0].id,'RDLINK')">
                 </div>
             </div>
         </div>
