--- a/scripts/components/road/tpls/attr_lc_tpl/lcFaceNameTpl.html
+++ b/scripts/components/road/tpls/attr_lc_tpl/lcFaceNameTpl.html
@@ -38,6 +38,12 @@
                             <input type="text" class="fm-control" ng-model="info.phonetic"/>
                         </div>
                     </li>
+                    <li>
+                        <label>名称来源</label>
+                        <div>
+                            <select ng-model="info.srcFlag" ng-options="value.code as value.label for value in nameSource" ng-class="{true:'chosen-disabled'}[srcFlagDisable]" ng-disabled="srcFlagDisable"></select>
+                        </div>
+                    </li>
                 </ul>
             </form>
         </div>
