修改分歧模型中branchType字段，修改实景看板分歧编辑

--- a/scripts/components/road/tpls/attr_branch_Tpl/signBoardOfBranch.html
+++ b/scripts/components/road/tpls/attr_branch_Tpl/signBoardOfBranch.html
@@ -100,7 +100,7 @@
         </div>
         <!--end 模式图信息-->
         <!--begin 名称信息-->
-        <div class="content">
+        <!--<div class="content">
             <ul class="list-group list-group-lg m-b-none">
                 <li class="list-group-item">
                     <div class="list-name">
@@ -112,15 +112,15 @@
                     <div class="list-line"></div>
                 </li>
                 <li class="list-group-item">
-                    <!--<ul ng-repeat="namesItem in nameGroup | orderBy:'nameGrouppid'" class="list-group child-list-ul list-group-lg m-b-none">
+                    &lt;!&ndash;<ul ng-repeat="namesItem in nameGroup | orderBy:'nameGrouppid'" class="list-group child-list-ul list-group-lg m-b-none">
                         <li class="list-group-item" ng-repeat="item in namesItem | orderBy:'nameId'">
                             <label class="control-label fm-cursor" ng-click="showDetail('name',$index ,namesItem,item.nameGroupid);" ng-bind="item.name"></label>
                             <i class="glyphicon glyphicon-remove-circle" ng-click="removeItem($index,'name',item)"></i>
                         </li>
-                    </ul>-->
+                    </ul>&ndash;&gt;
                 </li>
             </ul>
-        </div>
+        </div>-->
         <div class="module-box show-detail-title" ng-click="showDetail(0);">
             <div class="box-head font-bold">
                 名称信息（共 <span ng-bind="diverObj.signboards[0].names.length"></span> 条）
