--- a/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -13,7 +13,7 @@
     .tips-title {
         width: 100%;
         border-radius: 4px;
-        margin-bottom:10px;
+        /*margin-bottom:10px;*/
     }
     .middle {
         float: left;
@@ -131,7 +131,7 @@
         <span class="glyphicon glyphicon-remove-sign close-tips" ng-click="closeTips();"></span>
     </div>
     <div class="tips-title">
-        <div class="col-sm-12" style="display: inline; cursor: pointer; padding-top: 2px; padding-left: 19px; width: 100px">
+        <div class="col-sm-12" style="display: inline; cursor: pointer; padding-top: 2px; padding-left: 10px; width: 100px">
             <div ng-if="tipsPhotos.length == 0">
                 <img ng-src="../../../images/road/img/noimg.png" class="road-tips-img" width="60px" height="60px" ng-click="noPic()">
             </div>
@@ -140,7 +140,7 @@
                 <span style=" float: right;top: 0px;right: 10px; margin-top: -10px;background: red;border-radius: 15px;color: #fff!important;cursor: pointer;position: relative;line-height: 20px;display: inline-block;width: 20px;height: 20px;font-size: 13px;text-align: center" ng-if="tipsPhotos.length!=0">{{tipsPhotos.length}}</span>
             </div>
         </div>
-        <div class="col-sm-12" style="margin-left: 30px; display: inline; cursor: pointer; padding-top: 2px; padding-left: 19px; width: 100px">
+        <div class="col-sm-12" style="margin-left: 30px; display: inline; cursor: pointer; padding-top: 2px; padding-left: 23px; width: 80px">
             <div ng-if="audios.length == 0">
                 <img ng-src="../../../images/road/img/novoice.png" class="road-tips-img" width="60px" height="60px" ng-click="noAudio()">
             </div>
@@ -226,13 +226,13 @@
                         </div>
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('name')">
                             <label class="col-sm-5 control-label" style="padding: 4px">名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称:</label>
-                            <div class="col-sm-7" style="padding: 4px">
-                                <span class="label ">{{dataTipsData.name}}</span>
+                            <div class="col-sm-7 text-ellipsis" style="padding: 4px">
+                                <span class="label " title="{{dataTipsData.name}}">{{dataTipsData.name}}</span>
                             </div>
                         </div>
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('n_array')">
                             <label class="col-sm-5 control-label" style="padding: 4px">名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称:</label>
-                            <div class="col-sm-7" style="padding: 4px">
+                            <div class="col-sm-7 text-ellipsis" style="padding: 4px">
                                 <div ng-repeat="item in dataTipsData.n_array">
                                     <span class="label " ng-bind="item"></span>
                                 </div>
@@ -240,7 +240,7 @@
                         </div>
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.isGeneralRoad">
                             <label class="col-sm-5 control-label" style="padding: 4px">名&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;称:</label>
-                            <div class="col-sm-7">
+                            <div class="col-sm-7 text-ellipsis">
                                 <div class="col-sm-12" style="padding: 3px" ng-repeat="items in dataTipsData.o_array">
                                     <span class="label blank-text" ng-bind="name" ng-repeat="name in items.n_array"></span>
                                 </div>
@@ -334,13 +334,13 @@
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('f') && !dataTipsData.isCrossRoad">
                             <label class="col-sm-5 control-label" style="padding: 4px">关联道路:</label>
                             <div class="col-sm-7 text-ellipsis" style="padding: 3px;cursor: pointer;">
-                                <span class="label" ng-bind="dataTipsData.f.id" title="dataTipsData.f.id" ng-click="getFeatDataCallback(dataTipsData.f.id,'RDLINK')"></span>
+                                <span class="label" ng-bind="dataTipsData.f.id" title="{{dataTipsData.f.id}}" ng-click="getFeatDataCallback(dataTipsData.f.id,'RDLINK')"></span>
                             </div>
                         </div>
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('f') && dataTipsData.isCrossRoad">
                             <label class="col-sm-5 control-label" style="padding: 4px">关联Node:</label>
                             <div class="col-sm-7 text-ellipsis" style="padding: 3px;cursor: pointer;">
-                                <span class="label" ng-bind="dataTipsData.f.id" title="dataTipsData.f.id" ng-click="getFeatDataCallback(dataTipsData.f.id,'RDLINK')"></span>
+                                <span class="label" ng-bind="dataTipsData.f.id" title="{{dataTipsData.f.id}}" ng-click="getFeatDataCallback(dataTipsData.f.id,'RDLINK')"></span>
                             </div>
                         </div>
                         <div class="form-group" style="height: 6%;margin-bottom: 3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('rdDir')">
