修改道路名和分歧样式

--- a/less/editor-road.less
+++ b/less/editor-road.less
@@ -833,8 +833,8 @@
         min-width: 60%;
         min-height: 193px;
         max-width: 70%;
-        right: 37px;
-        margin-top: 25px;
+        //right: 37px;
+        //margin-top: 25px;
     }
 
     .pic-show-well {
