--- a/less/editor.less
+++ b/less/editor.less
@@ -2692,6 +2692,6 @@ input[type="range"]::-webkit-slider-thumb {
   border-radius: 4px;
   margin: 4px !important;
   cursor: pointer;
-  width: 87px;
+  //width: 87px;
   text-align: center;
 }
