--- a/scripts/components/poi/tpls/edit-tools/errorCheckTpl.html
+++ b/scripts/components/poi/tpls/edit-tools/errorCheckTpl.html
@@ -1,5 +1,5 @@
 <div ng-controller="ErrorCheckCtl">
-    <table class="table table-bordered table-condensed fm-console-table">
+    <table id="errorCheckTable" class="table table-bordered table-condensed fm-console-table">
         <thead>
             <tr>
                 <th ng-repeat="item in theadInfo">
@@ -14,11 +14,13 @@
             <tr ng-repeat="row in checkResultData">
                 <td title="{{row.ruleid}}" width="6%" class="fm-table-long-text">{{row.shortRuleId}}</td>
                 <td width="59">
-                    <span ng-if="row.rank==0" >无</span>
-                    <span ng-if="row.rank==1" >Fatal</span>
-                    <span ng-if="row.rank==2" >Critical</span>
-                    <span ng-if="row.rank==3" >Error</span>
-                    <span ng-if="row.rank==4" >warning</span>
+                    <div style="width: 59px">
+                        <span ng-if="row.rank==0" >无 </span>
+                        <span ng-if="row.rank==1" >Fatal </span>
+                        <span ng-if="row.rank==2" >Critical </span>
+                        <span ng-if="row.rank==3" >Error </span>
+                        <span ng-if="row.rank==4" >warning </span>
+                    </div>
                 </td>
                 <td width="5%">
                     <div ng-if="row.mutiCheck">
@@ -31,13 +33,13 @@
                     </div>
                 </td>
                 <td>
-                    <div title="{{row.information}}">{{row.shortInfo}}</div>
+                    <div ng-style="descriptStyle" title="{{row.information}}">{{row.shortInfo}}</div>
                 </td>
                 <td width="5%">
                     <div>{{row.create_date.substr(0,10)}}</div>
                 </td>
                 <td width="47">
-                    <div>{{row.worker}}</div>
+                    <div style="width:47px">{{row.worker}}</div>
                 </td>
                 <td width="103">
                     <select class="fm-control" ng-model="initType"
