车信剪头图样式调整

--- a/less/editor.less
+++ b/less/editor.less
@@ -2695,3 +2695,17 @@ input[type="range"]::-webkit-slider-thumb {
   //width: 87px;
   text-align: center;
 }
+
+/*车信剪头图*/
+.lane-direct-img-container {
+  display:inline-block;
+  margin:5px;
+}
+
+.lane-direct-img-container .remove {
+  float:right;
+  font-size:12px;
+  margin-top:-5px;
+  color:#fff;
+  cursor:pointer;
+}
