--- a/scripts/components/road/tpls/toolBar_cru_tpl/addConnexityTepl/addLaneconnexityTpl.html
+++ b/scripts/components/road/tpls/toolBar_cru_tpl/addConnexityTepl/addLaneconnexityTpl.html
@@ -3,64 +3,46 @@
         width: inherit;
     }
 </style>
-
-<div ng-controller="addLaneConnexityController" class="panel panel-default"
-     oncontextmenu="self.event.returnValue=false">
-    <form name="addLaneConnexityForm">
-    <ul class="fm-ul fm-ul-form">
-        <li >
-            <label class="control-label" style="font-size: 12px;width: 100%">创建车信</label>
-        </li>
-        <li >
-            <label class="control-label" style="font-size: 10px;width: 100%">提示：点击车道可增加公交车道</label>
-        </li>
-        <li>
-            <div style="width: auto;min-width: 0px;margin-top: 15px;" ng-repeat="item in directData.showNormalData">
-                <div>
-                    <span style=" float: right;font-size: 12px;top: 5px;margin-top: -10px;color: #fff;cursor: pointer;"
-                          class="glyphicon glyphicon-remove-sign"
-                          ng-click="minusNormalData(item,$index,$event)"></span>
-                    <img class="lanePic"
-                         ng-if="item.type===0"
-                         ng-src="../../../images/road/1301/1301_0_{{item.flag}}.svg"
-                         ng-click="addTransitData(item,$index)"
-                         title="{{item.flag}}">
-                    <img class="lanePic" ng-if="item.type===2"
-                         ng-click="addTransitData(item,$index)"
-                         ng-src="../../../images/road/1301/1301_2_{{item.flag}}.svg"
-                         title="{{item.flag}}">
-                </div>
-
+<div ng-controller="addLaneConnexityController" class="fm-component" oncontextmenu="self.event.returnValue=false">
+    <div class="content scroll-styled dark" style="height:90%;">
+        <div class="fm-panel">
+            <div class="title">
+                创建车信
+                <span class='pull-right'>（提示：点击箭头图可创建公交车道）</span>
             </div>
-
-        </li>
-        <li >
-            <div style="padding-top: 15px;width: auto;min-width: 0px"
-                 ng-repeat="busItem in directData.showTransitData track by $index">
-                <div>
-                       <span ng-if="busItem.flag!=='test'"
-                             style=" float: right;font-size: 12px;top: 0px;margin-top: -10px;
-                                     color: #fff;cursor: pointer;"
-                             class="glyphicon glyphicon-remove-sign"
-                             ng-click="minusTransitData(busItem,$index)"></span>
-                 <span ng-if="busItem.flag==='test'"
-                       style=" float: right;font-size: 12px;top: 0px;margin-top: -10px;
-                               color: #fff;cursor: pointer;">
-
-                 </span>
-                    <img
-                            class="lanePic"
-                            ng-if="items.flag!=='test'"
-                            ng-src="../../../images/road/1301/1301_1_{{busItem.flag}}.svg"
-                            title="{{items}}">
-                    <img    class="lanePic"
-                            ng-if="items.flag==='test'"
-                            ng-src="../../../images/road/1301/1301_1_test.svg">
+            <div class="content">
+                <div style="display: block; overflow: auto;min-height: 45px;">
+                    <div class="lane-direct-img-container" ng-repeat="item in directData.showNormalData">
+                        <span class="glyphicon glyphicon-remove-sign remove"
+                        ng-click="minusNormalData(item,$index,$event)"></span>
+                        <img class="lanePic"
+                        ng-if="item.type===0"
+                        ng-src="../../../images/road/1301/1301_0_{{item.flag}}.svg"
+                        ng-click="addTransitData(item,$index)"
+                        title="{{item.flag}}">
+                        <img class="lanePic" ng-if="item.type===2"
+                        ng-click="addTransitData(item,$index)"
+                        ng-src="../../../images/road/1301/1301_2_{{item.flag}}.svg"
+                        title="{{item.flag}}">
+                    </div>
                 </div>
-
+                <div style="display: block; overflow: auto;min-height: 45px;">
+                    <div class="lane-direct-img-container"
+                        ng-repeat="busItem in directData.showTransitData track by $index">
+                        <span ng-if="busItem.flag!=='test'" class="glyphicon glyphicon-remove-sign remove"
+                        ng-click="minusTransitData(busItem,$index)"></span>
+                        <span ng-if="busItem.flag==='test'" class="remove" style="width:12px;height: 14px;">
+                        </span>
+                        <img class="lanePic"
+                        ng-if="items.flag!=='test'"
+                        ng-src="../../../images/road/1301/1301_1_{{busItem.flag}}.svg"
+                        title="{{items}}">
+                        <img class="lanePic"
+                        ng-if="items.flag==='test'"
+                        ng-src="../../../images/road/1301/1301_1_test.svg">
+                    </div>
+                </div>
             </div>
-        </li>
-
-    </ul>
-        </form>
+        </div>
+    </div>
 </div>
