--- a/scripts/components/road/tpls/attr_speedLimit_tpl/speedLimitTpl.html
+++ b/scripts/components/road/tpls/attr_speedLimit_tpl/speedLimitTpl.html
@@ -137,7 +137,7 @@
                         </li>
                         <li>
                             <div ng-include="dateURL" class="muti-date" data-type="1"
-                                 date-str='{{speedLimitData.timeDomain}}'></div>
+                                 date-str='{{speedLimitData.timeDomain}}' style="width:100%;"></div>
                         </li>
 
                     </ul>
