--- a/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
+++ b/scripts/components/road/tpls/attr_tips_tpl/sceneAllTipsTpl.html
@@ -581,8 +581,8 @@
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('inCt')">
                             <label class="col-sm-5 control-label" style="padding: 4px">是否受指控:</label>
                             <div class="col-sm-7" style="padding: 3px">
-                                <span class="label" ng-if="dataTipsData.inCt==0">存在不受质控Link</span>
-                                <span class="label" ng-if="dataTipsData.inCt==1">全部受指控</span>
+                                <span class="label" ng-if="dataTipsData.inCt==0">存在不受控Link</span>
+                                <span class="label" ng-if="dataTipsData.inCt==1">全部受控</span>
                             </div>
                         </div>
                         <div class="form-group" style="height: 10%;margin-bottom: 3px;margin-top:3px;color:#fff;border-radius:4px;" ng-if="dataTipsData.hasOwnProperty('disableCtl')">
