车新的重构

--- a/less/editor-road.less
+++ b/less/editor-road.less
@@ -304,6 +304,7 @@
         overflow: hidden;
         border-radius: 4px;
         margin-bottom: 10px;
+        color: #fff;
     }
 
     li.list-group-item {
