--- a/scripts/components/road/tpls/attr_connexity_tpl/showInfoTpl.html
+++ b/scripts/components/road/tpls/attr_connexity_tpl/showInfoTpl.html
@@ -1,67 +1,63 @@
 <div ng-controller="infoOfConnexityController" id="infoOfConnexityDiv">
-    <ul class="fm-ul fm-ul-form">
-        <li style="margin-bottom:3px">
-            <div ng-repeat="showItem in directArr track by $index">
-
-                <img class="lanePic"  ng-if="!laneFlag" ng-click="getLanesInfo(showItem,$event)" title="点击可修改退出线"
-                      ng-src="../../../images/road/1301/1301_0_{{showItem}}.svg"
-                >
-                <img class="lanePic"  ng-if="laneFlag" ng-click="getLanesInfo(showItem,$event)" title="点击可修改退出线"
-                      ng-src="../../../images/road/1301/1301_2_{{showItem}}.svg"
-                >
-                <span style="font-size: 12px;top: 15px;left:-22px;color: #fff;cursor: pointer;"
-                      class="glyphicon glyphicon-edit" ng-click="getLanesInfo(showItem,$event)" title="点击可修改退出线"></span>
+    <div class="fm-panel" style="border-radius:0px;">
+        <div class='content'>
+            <div ng-repeat="showItem in directArr track by $index" style="display:inline-block;">
+                <img class="lanePic" ng-class="{0: 'active'}[$index]" style="margin: 5px;"  ng-if="!laneFlag" ng-click="selectLaneDirect($index, $event)"
+                ng-dblclick="doEditOutLinks(showItem)"
+                title="双击可修改退出线" ng-src="../../../images/road/1301/1301_0_{{showItem}}.svg">
+                <img class="lanePic" ng-class="{0: 'active'}[$index]" style="margin: 5px;" ng-if="laneFlag" ng-click="selectLaneDirect($index, $event)"
+                ng-dblclick="doEditOutLinks(showItem)"
+                title="双击可修改退出线" ng-src="../../../images/road/1301/1301_2_{{showItem}}.svg">
             </div>
-        </li>
-    </ul>
+        </div>
+    </div>
     <form name="infoConnexityForm">
-    <ul class="list-group list-group-lg m-b-none" ng-repeat="laneData in showLaneInfo track by $index">
-        <li class="list-group-item">
-            <div><label class="control-label">退出linkID</label></div>
-            <div class="inline"><input type="text" ng-model="laneData.outLinkPid" readonly/></div>
-        </li>
-        <li class="list-group-item">
-            <div><label class="control-label">通达方向</label></div>
-            <div class="inline">
-                <select ng-options="value.id as value.label for value in reachDirOptions"
-                        ng-model="laneData.reachDir"></select>
-            </div>
-        </li>
-        <li class="list-group-item">
-            <div><label class="control-label">进入车道</label></div>
-            <div class="inline"><input type="text" ng-model="laneData.enterLaneNum" readonly/></div>
-        </li>
-        <li class="list-group-item">
-            <div><label class="control-label">公交车道</label></div>
-            <div class="inline"><input type="text" ng-model="laneData.enterBusNum" readonly/></div>
-        </li>
-        <li class="list-group-item">
-            <div><label class="control-label">关系类型</label></div>
-            <div class="radio inline" style="text-align: left">
-                <label>
-                    <input type="radio" name="crossingOrLine{{$index}}" value=1 ng-model="laneData.relationshipType">
-                    路口
-                </label>
-                <label>
-                    <input type="radio" name="crossingOrLine{{$index}}" value=2 ng-model="laneData.relationshipType">
-                    线线
-                </label>
-            </div>
-        </li>
-        <li class="list-group-item">
-            <div><label class="control-label">经过线</label></div>
-            <div class="inline">
-                <label ng-click="changeVias(laneData)" style="cursor: pointer">编辑</label>
-            </div>
-
-        </li>
-        <li style="padding-left: 20px">
-            <div style="width:260px;" >
-                <div ng-repeat="cItem in laneData.vias track by $index" class="checkboxli">
-                    {{cItem.linkPid}}
+        <ul class="list-group list-group-lg m-b-none" style="margin:5px;" ng-repeat="laneData in outLanesArr track by $index">
+            <li class="list-group-item">
+                <div><label class="control-label">退出linkID</label></div>
+                <div class="inline">
+                    <input type="text" ng-model="laneData.outLinkPid"
+                    class='chosen-disabled' disabled="disabled" readonly>
                 </div>
-            </div>
-        </li>
-    </ul>
+            </li>
+            <li class="list-group-item">
+                <div><label class="control-label">通达方向</label></div>
+                <div class="inline">{{reachDirTrans[laneData.reachDir]}}</div>
+            </li>
+            <li class="list-group-item">
+                <div><label class="control-label">车道序号</label></div>
+                <div class="inline">{{currLaneIndex + 1}}</div>
+            </li>
+            <li class="list-group-item">
+                <div><label class="control-label">公交车道</label></div>
+                <div class="inline">{{getBusFlag(laneData.busLaneInfo)}}</div>
+            </li>
+            <li class="list-group-item">
+                <div><label class="control-label">关系类型</label></div>
+                <div class="radio inline" style="text-align: left">
+                    <label>
+                        <input type="radio" name="crossingOrLine{{$index}}" value=1 ng-model="laneData.relationshipType">
+                        路口
+                    </label>
+                    <label>
+                        <input type="radio" name="crossingOrLine{{$index}}" value=2 ng-model="laneData.relationshipType">
+                        线线
+                    </label>
+                </div>
+            </li>
+            <li class="list-group-item">
+                <div><label class="control-label">经过线</label></div>
+                <div class="inline">
+                    <label ng-click="changeVias(laneData)" style="cursor: pointer">编辑</label>
+                </div>
+            </li>
+            <li style="padding-left: 20px">
+                <div style="width:260px;" >
+                    <div ng-repeat="cItem in laneData.vias track by $index" class="checkboxli">
+                        {{cItem.linkPid}}
+                    </div>
+                </div>
+            </li>
+        </ul>
     </form>
 </div>
