--- a/styles/imeep/editor-road.css
+++ b/styles/imeep/editor-road.css
@@ -251,6 +251,7 @@
   overflow: hidden;
   border-radius: 4px;
   margin-bottom: 10px;
+  color: #fff;
 }
 .blackTheme li.list-group-item {
   position: relative;
